new data for testing

--- a/macros.tex
+++ b/macros.tex
@@ -116,6 +116,7 @@
 
 \newcommand{\FODA}{\texttt{FODA}}
 \newcommand{\fodaPA}{\ensuremath{\mathtt{SPLA}}}
+\newcommand{\fodaPAc}{\ensuremath{\mathtt{SPLA{^\calC}}}}
 \newcommand{\fodaPAp}{\ensuremath{\mathtt{SPLA{^\calP}}}}
 \newcommand{\fodaPAbasic}{\ensuremath{\mathtt{fodaA_b}}}
 \newcommand{\wellstructured}{\ensuremath{\mathtt{fodaA_{ws}}}}
