--- a/syntax.tex
+++ b/syntax.tex
@@ -5,7 +5,7 @@ In this section we introduce our language. In addition to present its syntax, we
 
 \subsection{Syntax and operational semantics}
 \label{sec:stat:sintax}
-Following our previous work~\cite{acl13,cln16}, we will consider a
+Following our previous work~\cite{acl13,clc16}, we will consider a
 set of features. We denote this set by $\calF$ and consider that $\feature{A}, \feature{B},
 \feature{C}$ range over $\calF$. We have a special feature
 $\checkmark\not\in\calF$ to mark the end  of a product. We consider a syntax similar to
