--- a/testing.tex
+++ b/testing.tex
@@ -113,6 +113,16 @@ probability.
 \end{figure}
 
 
+\begin{figure}[h]
+	\centering
+	\linefigure
+	\includegraphics[width=0.8\hsize,angle=0]{boxplot_mem.eps}
+	\linefigure
+	\caption{Memory usage.}\label{fig:plot:probs:boxplotmem}
+\end{figure}
+
+
+
 
 Now we can compare the last results with the one obtained using \fodaPA~\cite{acl13}
 and the cost extension \fodaPAc~\cite{clc16}.
