--- a/testing.tex
+++ b/testing.tex
@@ -89,12 +89,12 @@ We have generated randomly feature models with 1000, 2000, 3000, 4000, 5000, 600
 	\centering
 	\begin{minipage}[b]{0.48\textwidth}
 		\includegraphics[width=\textwidth]{boxplot_0_2.eps}
-		\caption{Comparison between product models.}\label{fig:plot:probs:boxplot}
+		\caption{Feature models computing with probability of 20\% of having parallel operands.}\label{fig:plot:probs:boxplot}
 	\end{minipage}
 	\hfill
 	\begin{minipage}[b]{0.48\textwidth}
 		\includegraphics[width=\textwidth]{boxplot_mem.eps}
-		\caption{Memory usage.}\label{fig:plot:probs:boxplotmem}
+		\caption{Memory usage graph for feature models with probability of 20\% of having parallel operands.}\label{fig:plot:probs:boxplotmem}
 	\end{minipage}
 \end{figure}
 
@@ -136,12 +136,28 @@ ejecutaron las pruebas, este tiene las siguientes caracteristicas:
 	\centering
 	\begin{minipage}[b]{0.48\textwidth}
 		\includegraphics[width=\textwidth]{boxplot_0_1.eps}
-		\caption{Comparison between product models.}\label{fig:plot:probs:boxplot_0_1}
+		\caption{Feature models computing with probability of 1\% of having parallel operands.}\label{fig:plot:probs:boxplot_0_1}
 	\end{minipage}
 	\hfill
 	\begin{minipage}[b]{0.48\textwidth}
+		\includegraphics[width=\textwidth]{boxplot_0_1_mem.eps}
+		\caption{Memory usage graph for feature models with probability of 1\% of having parallel operands.}\label{fig:plot:probs:boxplot_0_1_mem}
+	\end{minipage}
+\end{figure}
+
+
+
+
+\begin{figure}[h]
+	\centering
+	\begin{minipage}[b]{0.48\textwidth}
 		\includegraphics[width=\textwidth]{boxplot_0_5.eps}
-		\caption{Memory usage.}\label{fig:plot:probs:boxplot_0_5}
+		\caption{Feature models computing with probability of 50\% of having parallel operands.}\label{fig:plot:probs:boxplot_0_5}
+	\end{minipage}
+	\hfill
+	\begin{minipage}[b]{0.48\textwidth}
+		\includegraphics[width=\textwidth]{boxplot_0_5_mem.eps}
+		\caption{Memory usage graph for feature models with probability of 50\% of having parallel operands.}\label{fig:plot:probs:boxplot_0_5_mem}
 	\end{minipage}
 \end{figure}
 
